# python-ask-service

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: empty.yml  linter.yml
python_ask_service/backend/: __init__.py  app.py  models.py
tests/: conftest.py  test_ask.py  test_connection.py
