[tool.poetry]
name = "python-ask-service"
version = "0.1.0"
description = ""
authors = ["Leon Markovich <leonmarkovich97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.2.2"
ruff = "^0.5.1"
flask = "^3.0.3"
openai = "^1.35.13"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
